--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
@@ -4,116 +4,107 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12 text-center">
-        <div class="card card-gray shadow">
-            <div class="card-header">
-                <h4>Raw Material Supplier</h4>
 
-            </div>
 
-        </div>
-
-    </div>
-
-</div>
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
-        <div class="card card-navy shadow">
-            <div class="card-header">
-                <div class="row text-sm">
-                    <div class="col-md-2">
-                        <h4>Search by:</h4>
-                    </div>
-                    <div class="col-md-3 float-right">
-                        <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
-                    </div>
-                    <div class="col-7">
-                        <button class="btn btn-outline-primary btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Raw Material Supplier</button>
-                    </div>
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-navy">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-3 float-left">
+                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Raw Material Supplier
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                                <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Raw Material Supplier</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-
     </div>
+    <div class="col-md-12" style="margin-top:-10px">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-md-12" id="dataContainer">
 
-</div>
-
-<div class="col-md-12" style="margin-top:-10px">
-    <div class="card">
-        <div class="card-body">
-            <div class="col-md-12" id="dataContainer">
-
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 
+
+
+
+
+
 <div class="modal" id="modalRawmaterialSupplier" role="dialog" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHeadRawmaterialSupplier"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                <form id="formdepot">
+
+                <div class="row">
                     <input type="hidden" id="hdRawmaterialSupplierId" />
-                    <div class="form-row">
-                        @*<div class="form-group col-md-12">
-            <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
-            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-            <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
-            <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
-        </div>*@
-                        <div class="form-group col-md-12">
-                            <label for="ddlSupplierName" class="control-label">Supplier Name</label>
-                            <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
-                            <span class="error hide required-SupplierName font-weight-bold">Input Supplier Name!</span>
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="ddlMobileName" class="control-label">Mobile Number</label>
-                            <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" onkeypress="return isNumber(event)" />
-                            <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Name!</span>
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="ddlAddress" class="control-label">Address</label>
-                            <input type="text" id="ddlAddress" class="form-control form-control-sm" />
-                        </div>
-
-                        <div class="form-group col-md-12">
-                            <label for="ddlTradeLicense" class="control-label">TradeLicense</label>
-                            <input type="text" id="ddlTradeLicense" class="form-control form-control-sm" />
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="ddlTIN" class="control-label">TIN</label>
-                            <input type="text" id="ddlTIN" class="form-control form-control-sm" />
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="ddlBIN" class="control-label">BIN</label>
-                            <input type="text" id="ddlBIN" class="form-control form-control-sm" />
-                        </div>
-
-
-                        <div class="form-group col-md-12">
-                            <label for="ddlStatus" class="control-label">Status</label>
-                            <select class="form-control form-control-sm" id="ddlStatus">
-                                <option value="Active">Active</option>
-                                <option value="InActive">InActive</option>
-                            </select>
-                        </div>
+                    <div class="form-group col-md-4">
+                        <label for="ddlSupplierName" class="control-label">Supplier Name</label>
+                        <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
+                        <span class="error hide required-SupplierName font-weight-bold">Input Supplier Name!</span>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="ddlMobileName" class="control-label">Mobile Number</label>
+                        <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" onkeypress="return isNumber(event)" />
+                        <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Name!</span>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="ddlAddress" class="control-label">Address</label>
+                        <input type="text" id="ddlAddress" class="form-control form-control-sm" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-4">
+                        <label for="ddlTradeLicense" class="control-label">TradeLicense</label>
+                        <input type="text" id="ddlTradeLicense" class="form-control form-control-sm" />
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="ddlTIN" class="control-label">TIN</label>
+                        <input type="text" id="ddlTIN" class="form-control form-control-sm" />
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="ddlBIN" class="control-label">BIN</label>
+                        <input type="text" id="ddlBIN" class="form-control form-control-sm" />
                     </div>
 
-                </form>
+
+                    <div class="form-group col-md-2">
+                        <label for="ddlStatus" class="control-label">Status</label>
+                        <select class="form-control form-control-sm" id="ddlStatus">
+                            <option value="Active">Active</option>
+                            <option value="InActive">InActive</option>
+                        </select>
+                    </div>
+                </div>
+
 
 
             </div>
 
-            <div class="modal-footer btn-default">
+            <div class="modal-footer btn-default bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
