--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -78,7 +78,7 @@
 <div class="modal " id="StockiestModal" role="dialog">
     <div class="modal-dialog modal-xl " style="margin-top:5px" role="document" id="StockiestModal">
         <div class="modal-content">
-            <div class="modal-header bg-navy">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -102,14 +102,6 @@
                     </div>
 
 
-                    @*<div class="col-md-2">
-                            <label class="control-label" for="ddlTerritoryName">TerritoryName</label>
-                            <select id="ddlTerritoryName" class="form-control form-control-sm select2">
-                                <option value="0">Select Territory</option>
-                            </select>
-                            <span class="error hide required-TerritoryName font-weight-bold">Select Territory Name!</span>
-                            <span class="error hide duplicate-TerritoryName font-weight-bold">Already Territory Exist!</span>
-                        </div>*@
 
                     <div class="col-md-2">
                         <label for="txtStockiestName" class="control-label">StockiestName</label>
@@ -179,7 +171,7 @@
             </div>
 
 
-            <div class="modal-footer  bg-navy">
+            <div class="modal-footer  bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
