--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -191,7 +191,7 @@
                                 <span class="error hide req-qtyChecking">Quantity Must be less than or equal Product Qty</span>
                             </div>
                             <div class="col-md-2">
-                                <label for="ddlPrice" class="col-form-label text-white">Rate</label>
+                                <label for="ddlPrice" class="col-form-label text-white">Rate/PC</label>
                                 <input type="text" id="txtPrice" class="form-control form-control-sm" />
                             </div>
                             <div class="col-md-1">
@@ -262,7 +262,8 @@
                                         <th style="width:10%">Name</th>
                                         <th style="width:10%">Measurement Desc</th>
                                         <th style="width:5%">Quanity</th>
-                                        <th style="width:5%">Rate</th>
+                                        <th style="width:5%">Total Pc</th>
+                                        <th style="width:5%">Rate/PC</th>
                                         <th style="width:5%">Discount%</th>
                                         <th style="width:5%">Discount(Tk.)</th>
                                         <th style="width:10%">Amount(Tk.)</th>
@@ -557,28 +558,30 @@
 
                     var td1 = "<td class='text-center text-bold'>" + (sl + 1) + "</td>"
                     var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlProductName") + "</td>";
-                var td3 = "<td class='text-center'>" + dropDownSelectedText("ddlMeasurementName") + "</td>";
+                    var td3 = "<td class='text-center'>" + dropDownSelectedText("ddlMeasurementName") + "</td>";
 
-                    var td4 = "<td class='text-center QuanityIDCell'>" + txtTotalQty.val() + "</td>";
-                    var td5 = "<td class='text-center' >" + txtPrice.val() + "</td>";
-                    var td6 = "<td class='text-center'>" + txtDiscount.val() + "</td>";
+                   // var td4 = "<td class='text-center QuanityIDCell'>" + txtTotalQty.val() + "</td>";
+                   var td4 = "<td class='text-center QuanityIDCell'>" + txtQuanity.val() + "</td>";
+                   var td5 = "<td class='text-center QuanityIDCell'>" + txtTotalQty.val() + "</td>";
+                   var td6 = "<td class='text-center' >" + txtPrice.val() + "</td>";
+                   var td7 = "<td class='text-center'>" + txtDiscount.val() + "</td>";
 
                     //var td7 = "<td class='text-center DiscountIDCell'>" + txtQuanity.val() * txtPrice.val() / txtDiscount.val() + "</td>";
                      //var td7 = "<td class='text-center DiscountIDCell'>" + ddlttprice.val() * txtDiscount.val() / 100 + "</td>";
-                     var td7 = "<td class='text-center DiscountIDCell'>" + ddlttdis.val() + "</td>";
+                     var td8 = "<td class='text-center DiscountIDCell'>" + ddlttdis.val() + "</td>";
                     //var td8 = "<td class='text-center TotalIDCell'>" + txtQuanity.val() * txtPrice.val() + "</td>";
-                var td8 = "<td class='text-center TotalIDCell'>" + ddlpt.val()  + "</td>";
+                     var td9 = "<td class='text-center TotalIDCell'>" + ddlpt.val()  + "</td>";
 
                    // var td9 = "<td class='text-center'> <a href='#' class='btn btn-sm btn-danger btn-flat data-onfly-del'><i class='far fa-trash-alt'></i></a></td>";
-                var td9 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del' data-subtotal='" + ddlpt.val() + "' data-quentaty='" + txtTotalQty.val() + "'  data-discount='" + ddlttdis.val() + "'><i class='far fa-trash-alt'></i> Delete</a></td>";
+                   var td10 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del' data-subtotal='" + ddlpt.val() + "' data-quentaty='" + txtTotalQty.val() + "'  data-discount='" + ddlttdis.val() + "'><i class='far fa-trash-alt'></i> Delete</a></td>";
 
 
-                    var td10 = "<td class='hide ProductId'>" + ddlProductName.val() + "</td>";
-                var td11 = "<td class='hide MeasurementId'>" + ddlMeasurementName.val() + "</td>";
-                var td12 = "<td class='hide '>" + dropDownSelectedText("ddlQtyUnit") + "</td>";
-                var td13 = "<td class='hide '>" + txtQuanity.val()+ "</td>";
+                var td11 = "<td class='hide ProductId'>" + ddlProductName.val() + "</td>";
+                var td12 = "<td class='hide MeasurementId'>" + ddlMeasurementName.val() + "</td>";
+                var td13 = "<td class='hide '>" + dropDownSelectedText("ddlQtyUnit") + "</td>";
+                //var td13 = "<td class='hide '>" + txtQuanity.val()+ "</td>";
 
-                var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + td12 + td13+"</tr>";
+                var tr = "<tr class='text-sm'>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + td12 + td13 + "</tr>";
 
 
 
@@ -862,16 +865,16 @@
                             debugger;
                             details.push({
                                ProductSalesDetailsId: 0,
-                               MeasurementId: tds.eq(10).html(),
-                               Quanity: tds.eq(3).html(),
-                               Price: tds.eq(4).html(),
-                               Discount: tds.eq(5).html(),
-                               FinishGoodProductInfoId: tds.eq(9).html(),
+                               MeasurementId: tds.eq(11).html(),
+                               Quanity: tds.eq(4).html(),
+                               Price: tds.eq(5).html(),
+                               Discount: tds.eq(6).html(),
+                               FinishGoodProductInfoId: tds.eq(10).html(),
                                MeasurementSize: tds.eq(2).html(),
-                               DiscountTk: tds.eq(6).html(),
-                                QtyKG: tds.eq(11).html(),
+                               DiscountTk: tds.eq(7).html(),
+                               QtyKG: tds.eq(12).html(),
                                
-                                BoxQuanity: tds.eq(12).html()
+                               BoxQuanity: tds.eq(3).html()
 
 
                             });
