--- a/ERPWeb/Views/AgroConfiguration/CreateDivisionInfo.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateDivisionInfo.cshtml
@@ -4,10 +4,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+<div class="row" style="margin-top:-25px;">
     <div class="col-md-12">
-        <div class="card card-gray shadow">
-            <div class="card-header">
+
+
+        <div class="card card-navy">
+            <div class="card-header" style="text-align: center;">
+
                 <div class="row">
                     <div class="col-md-3">
                         <a href="/AgroConfiguration/GetDivisionInfo" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
@@ -15,70 +18,70 @@
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <h5 class="text-center text-bold">Create Division</h5>
+
+
+                        <h4 class="text-center text-bold">
+                            Create Division
+                        </h4>
                     </div>
                     <div class="col-md-3">
+                        <button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="card-body text-sm">
+            <div class="row " style="margin-top:-18px;">
+
+                <div class="col-md-2">
+                    <label for="ddlZoneName" class="control-label">ZoneName</label>
+                    @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Select Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                    <span class="error hide required-ZoneName font-weight-bold">Select Zone Name!</span>
+                    <span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
+                </div>
+
+                <div class="col-md-2">
+                    <label for="txtDivisionName" class="control-label">DivisionName</label>
+                    <input type="text" id="txtDivisionName" class="form-control form-control-sm" />
+                    <span class="error hide required-DivisionName font-weight-bold">Input Division Name!</span>
+                    <span class="error hide duplicate-DivisionName font-weight-bold">Already Division Exist!</span>
+                </div>
+
+                <div class="col-md-1">
+                    <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
+                    <div class="clearfix">
+                        <button type="submit" class="btn btn-sm float-left btn-outline-success" id="addButton"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </div>
 
-            <div class="card-body text-sm">
-                <div class="row " style="margin-top:-8px;">
-                    @*<div class="col-md-2">
-                        <label for="ddlOrganizationName" class="control-label">Organization Name</label>
-                        @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "--Select Organization--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                        <span class="error hide required-ddlOrganization font-weight-bold">Organization Name is Required</span>
-                    </div>*@
-                    <div class="col-md-2">
-                        <label for="ddlZoneName" class="control-label">ZoneName</label>
-                        @Html.DropDownList("ddlZoneName", (IEnumerable<SelectListItem>)ViewBag.ddlZoneName, "--Select Zone--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                        <span class="error hide required-ZoneName font-weight-bold">Select Zone Name!</span>
-                        <span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
-                    </div>
 
-                    <div class="col-md-2">
-                        <label for="txtDivisionName" class="control-label">DivisionName</label>
-                        <input type="text" id="txtDivisionName" class="form-control form-control-sm" />
-                        <span class="error hide required-DivisionName font-weight-bold">Input Division Name!</span>
-                        <span class="error hide duplicate-DivisionName font-weight-bold">Already Division Exist!</span>
-                    </div>
-                    
-                    <div class="col-md-1 " style="margin-top:5px;">
-                        <label for="addButton" class="control-label"></label>
-                        <div class="clearfix">
-                            <button type="submit" class="btn btn-outline-primary float-left " id="addButton" title="Add To List"><i class="fas fa-plus"></i> Add</button>
-                        </div>
-                    </div>
-                </div>
+        </div>
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <table class="table table-bordered table-striped table-sm text-sm table-responsive-lg" id="tblMargeItems">
-                            <thead>
-                                <tr>
-                                    <th colspan="9">
-                                        <button class="btn btn-outline-success btn-sm float-lg-left mt-2" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
-                                    </th>
-                                </tr>
 
-                                <tr class="text-center btn-dark">
-                                    <th style="width:5%">#SL</th>
-                                    <th class="hide" style="width:15%">OrganizationName</th>
-                                    <th style="width:15%">Zone Name</th>
-                                    <th style="width:15%">Division Name</th>
-                                    <th style="width:10%">Action</th>
-                                    <th class="hide OrganizationId"></th>
-                                    <th class="hide ZoneId"></th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                    </div>
 
-                </div>
+        <div class="row"  >
+            <div class="col-md-12">
+                <table class="table table-bordered table-striped table-sm text-sm table-responsive-lg" id="tblMargeItems">
+                    <thead>
+
+
+                        <tr class="text-center btn-dark">
+                            <th style="width:5%">#SL</th>
+                            <th class="hide" style="width:15%">OrganizationName</th>
+                            <th style="width:15%">Zone Name</th>
+                            <th style="width:15%">Division Name</th>
+                            <th style="width:10%">Action</th>
+                            <th class="hide OrganizationId"></th>
+                            <th class="hide ZoneId"></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
-
-
 
         </div>
     </div>
