--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -4,35 +4,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12 text-center">
-        <div class="card card-gray shadow">
-            <div class="card-header">
-                <h4>Depot Setup</h4>
 
-            </div>
-
-        </div>
-
-    </div>
-
-</div>
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
-        <div class="card card-navy shadow">
-            <div class="card-header">
-                <div class="row text-sm">
-                    <div class="col-md-2">
-                        <h4>Search by:</h4>
-                    </div>
-                    <div class="col-md-3 float-right">
-                        <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
-                    </div>
-                    <div class="col-7">
-                        <button class="btn btn-outline-primary btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Depot</button>
-                    </div>
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-navy">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-3 float-left">
+                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Depot Setup
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                                <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Depot</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,17 +34,19 @@
 
     </div>
 
-</div>
+    <div class="col-md-12" style="margin-top:-10px">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-md-12" id="dataContainer">
 
-<div class="col-md-12" style="margin-top:-10px">
-    <div class="card">
-        <div class="card-body">
-            <div class="col-md-12" id="dataContainer">
-
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
+
 
 
 <div class="modal" id="depotmodal" role="dialog">
@@ -64,12 +60,7 @@
                 <form id="formdepot">
                     <input type="hidden" id="hddepotId" />
                     <div class="form-row">
-                        @*<div class="form-group col-md-8">
-                            <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
-                            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
-                            
-                        </div>*@
+
                         <div class="form-group col-md-8">
                             <label for="ddlDepotName" class="control-label">DepotName</label>
                             <input type="text" id="ddlDepotName" class="form-control form-control-sm" />
