--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
@@ -4,59 +4,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12 text-center">
-        <div class="card card-gray shadow">
-            <div class="card-header">
-                <h4>Finish Good Product Supplier</h4>
 
-            </div>
 
-        </div>
-
-    </div>
-
-</div>
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
-        <div class="card card-navy shadow">
-            <div class="card-header">
-                <div class="row text-sm">
-                    <div class="col-md-2">
-                        <h4>Search by:</h4>
-                    </div>
-                    <div class="col-md-3 float-right">
-                        <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
-                    </div>
-                    <div class="col-7">
-                        <button class="btn btn-outline-primary btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Supplier</button>
-                    </div>
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-navy">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-3 float-left">
+                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Finish Good Product Supplier
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                                <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Supplier</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-
     </div>
+    <div class="col-md-12" style="margin-top:-10px">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-md-12" id="dataContainer">
 
-</div>
-
-<div class="col-md-12" style="margin-top:-10px">
-    <div class="card">
-        <div class="card-body">
-            <div class="col-md-12" id="dataContainer">
-
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
 
 
 <div class="modal" id="modalSupplier" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHeadSupplier"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -64,12 +63,7 @@
                 <form id="formdepot">
                     <input type="hidden" id="hdSupplierId" />
                     <div class="form-row">
-                        @*<div class="form-group col-md-12">
-                            <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
-                            @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "Select OrgName", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                            <span class="error hide required-organizatinName font-weight-bold">Input OrganizatinName!</span>
-                            <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
-                        </div>*@
+
                         <div class="form-group col-md-12">
                             <label for="ddlSupplierName" class="control-label">Supplier Name</label>
                             <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
