--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -3,55 +3,49 @@
     ViewBag.Title = "ProductCommision";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row">
+<div class="row" style="margin-top: 5px">
     <div class="col-md-12">
-        <div class="card  shadow card card-primary card-outline card-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
 
-                <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-commissiononproductList-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproductList" role="tab" aria-controls="custom-tabs-two-commissiononproductList" aria-selected="false">Commission On Product List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " id="custom-tabs-two-commissiononproduct-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproduct" role="tab" aria-controls="custom-tabs-two-commissiononproduct" aria-selected="false">Commission On Product</a>
-                    </li>
-                </ul>
 
-            </div>
+        <div class="card  shadow card  card-outline card-tabs" style="margin-top:-30px">
+
+            <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" id="custom-tabs-two-commissiononproductList-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproductList" role="tab" aria-controls="custom-tabs-two-commissiononproductList" aria-selected="false">Commission On Product List</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-commissiononproduct-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproduct" role="tab" aria-controls="custom-tabs-two-commissiononproduct" aria-selected="false">Commission On Product</a>
+                </li>
+            </ul>
+
         </div>
 
 
         <div class="card-body shadow">
             <div class="tab-content" id="custom-tabs-two-tabContent">
                 <div class="tab-pane fade show active " id="custom-tabs-two-commissiononproductList" role="tabpanel" aria-labelledby="custom-tabs-two-commissiononproductList-tab">
-                    <div class="row" style="margin-top:-20px">
-                        <div class="col-md-12">
-                            <div class="card shadow card-gray-dark">
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
-                            <div class="card card-navy shadow">
+                            <div class="card card-gray-dark shadow ">
                                 <div class="card-header">
                                     <div class="row text-sm">
                                         <div class="col-md-2">
-                                            <h4>Search by:</h4>
+                                            <h5 class="text-left">Search by:</h5>
                                         </div>
-                                        <div class="col-md-2">
-                                            @*<label class="control-label" for="ddlProductName">Product Name</label>*@
-                                            @Html.DropDownList("ddlProductNameSearch", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--Select Product Name --", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                        <div class="col-md-3">
+
+                                            @Html.DropDownList("ddlProductNameSearch", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "Product Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                             <span class="error hide req-ddlProductName">Product Is Required</span>
                                         </div>
                                         <div class="col-md-2 hide">
-                                            @*<label class="control-label font-weight-bold">Year</label>*@
+
                                             <div class="input-group input-group-sm ">
                                                 <input type="number" class="form-control form-control-sm" id="dateCalenderYearSearch" placeholder="Search by Year" />
 
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-5">
 
                                         </div>
 
@@ -76,14 +70,8 @@
                     </div>
                 </div>
                 <div class="tab-pane fade show " id="custom-tabs-two-commissiononproduct" role="tabpanel" aria-labelledby="custom-tabs-two-commissiononproduct-tab">
-                    <div class="row" style="margin-top:-15px">
-                        <div class="col-md-12">
-                            <div class="card shadow card-gray-dark">
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
+                    <div class="row" style="margin-top:-35px">
                         <div class="col-md-12">
                             <div class="card card-navy">
                                 <div class="card-header" style="text-align: center;">
@@ -99,7 +87,7 @@
                                             </h5>
                                         </div>
                                         <div class="col-md-3">
-
+                                            <button class="btn btn-success btn-sm btn float-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i></button>
                                         </div>
 
                                     </div>
@@ -116,7 +104,7 @@
 
                                             </div>
                                         </div>
-                                        <div class="col-md-2">
+                                        <div class="col-md-3">
                                             <label class="control-label" for="ddlProductName">Product Name</label>
                                             @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--Select Product --", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                             <span class="error hide req-ddlProductName">Product Is Required</span>
@@ -156,50 +144,10 @@
                                             <input type="text" id="txtRemarks" name="txtRemarks" class="form-control form-control-sm" />
                                         </div>
 
-                                        <div class="col-md-2">
-                                            <label for="" class="control-label font-weight-bold" style="visibility:hidden"> Add To List</label>
+                                        <div class="col-md-1">
+                                            <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                                             <div class="clearfix">
-                                                <button type="submit" class="btn btn-sm btn-outline-warning" id="addTolist"><i class="fas fa-plus"></i> &nbsp; ADD TO LIST </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12" style="margin-top:-10px">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="col-md-12">
-                                        <div class="row">
-                                            <div class="col-md-12" style="overflow-y:scroll">
-                                                <table class="table table-bordered table-sm text-sm table-striped table-responsive-lg" id="tblCommissionOnProduct">
-                                                    <thead>
-                                                        <tr>
-                                                            <th colspan="9">
-                                                                <button class="btn btn-outline-success btn-sm float-lg-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i> </button>
-                                                            </th>
-                                                        </tr>
-                                                        <tr class="btn-dark">
-                                                            <th>#SL</th>
-                                                            <th>Product Name</th>
-                                                            <th class="hide">Year</th>
-
-                                                            <th>Credit</th>
-                                                            <th>Cash Qty</th>
-                                                            <th>
-                                                                From Date
-                                                            </th>
-                                                            <th>
-                                                                To Date
-                                                            </th>
-                                                            <th>Remarks</th>
-                                                            <th>Action</th>
-
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody></tbody>
-                                                </table>
-
+                                                <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
                                             </div>
                                         </div>
                                     </div>
@@ -207,6 +155,36 @@
                             </div>
                         </div>
 
+
+                    </div>
+
+                    <div class="row" style="margin-top:-10px">
+                        <div class="col-md-12" style="overflow-y:scroll">
+                            <table class="table table-bordered table-sm text-sm table-striped table-responsive-lg" id="tblCommissionOnProduct">
+                                <thead>
+
+                                    <tr class="btn-dark">
+                                        <th>#SL</th>
+                                        <th>Product Name</th>
+                                        <th class="hide">Year</th>
+
+                                        <th>Credit</th>
+                                        <th>Cash Qty</th>
+                                        <th>
+                                            From Date
+                                        </th>
+                                        <th>
+                                            To Date
+                                        </th>
+                                        <th>Remarks</th>
+                                        <th>Action</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+
+                        </div>
                     </div>
                 </div>
 
@@ -332,7 +310,7 @@
 
 
         $(document).ready(function () {
-  
+
 
             $('.select2').select2();
             $('.select2bs4').select2({
@@ -342,7 +320,7 @@
 
             dptFromDate.prop('readonly', true);
             dptToDate.prop('readonly', true);
-         
+
             dptFromDate.css("background-color", "#fff");
             dptToDate.css("background-color", "#fff");
             $('#dptFromDate').datepicker({
@@ -435,7 +413,7 @@
 
         function OpenModal() {
             $("#modalCommissionOnProduction").modal("show");
-        
+
         }
         $("#addTolist").click(function (e) {
             e.preventDefault();
@@ -459,7 +437,7 @@
                     var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 +td9+td10+ "</tr>";
 
                     $("#tblCommissionOnProduct tbody").append(tr);
-    
+
                     productName.push(ddlProductName.val());
                     $("#btnSubmit").show();
 
@@ -603,7 +581,7 @@
 
             hdCommissionOnProductId.val(td11);//id
             dateCalenderYearEdit.val(td1);//year
-       
+
             ddlProductNameEdit.val(td3);//product
             ddlProductNameEdit.trigger("change");
             numCreditEdit.val(td4);
@@ -620,7 +598,7 @@
             OpenModal();
             $("#spanModalHead").text('Update Commission On Product');
             $("#spanSaveTextRegion").text('Update');
-   
+
         })
 
 
@@ -629,7 +607,7 @@
             var model = [];
 
 
-  
+
                 model.push({
                     CommissionOnProductId: hdCommissionOnProductId.val(),
                     FinishGoodProductId: ddlProductNameEdit.val(),
@@ -641,7 +619,7 @@
                     Remarks: txtRemarksEdit.val(),
                     Status: ddlstatus.val()
                 });
-  
+
 
 
             var data = JSON.stringify({ model });
